fix: layout issue in footer

--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -1,8 +1,6 @@
 .footer-section {
   font-size: 1rem;
   width: 100%;
-  position: absolute;
-  left: 0;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -11,6 +9,17 @@
   padding: 2rem;
   text-align: center;
   margin: 0 auto;
+  font-size: 1rem;
+  right: -8rem;
+  left: -8rem;
+  position: relative;
+  width: 100vw;
+  @media (min-width: $breakpoint_small) {
+    left: -4rem;
+  }
+  @media (min-width: $breakpoint_medium) {
+    left: -8rem;
+  }
 
   .footer-right,
   .footer-middle,
